--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.13.0",
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.6.0",
+    "jspdf": "^3.0.3",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
